...
            android:layout_height="109dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="App Logo"
            android:src="@drawable/fitrack" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="8dp"
            android:hint="Username"
            android:inputType="text" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="16dp"
            android:hint="Password"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Login" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Don't have an account? Register"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
...
