...
    <string name="food_log_added">%1$s added to your log</string>
    <string name="select_food">Select %1$s Food</string>

    <!-- Exercise Activities -->
    <string name="add_exercise">Add Exercise</string>
    <string name="search_exercise">Search Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_calories">Calories Burned</string>
    <string name="exercise_added">Exercise added successfully</string>
    <string name="exercise_updated">Exercise updated!</string>
    <string name="invalid_exercise_calories">Invalid calories format</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="confirm_delete_exercise">Delete \"%1$s\" and all related logs?</string>
    <string name="exercise_deleted">Deleted: %1$s</string>
    <string name="exercise_delete_error">Error deleting exercise: %1$s</string>
    <string name="default_exercise_edit">Unfortunately! you cannot edit default exercise</string>
    <string name="default_exercise_delete">Unfortunately! you cannot delete default exercise</string>
    <string name="calories_burned_added">Calories burned added: %1$d</string>
    <string name="exercise_burns">Burns %1$d calories (30 mins)</string>
    <string name="confirm_delete">Confirm Deletion</string>


    <!-- Error Messages -->
    <string name="error_no_user_id">Error: No user ID provided</string>
    <string name="error_initializing">Error initializing: %1$s</string>
...
