...

            <!-- Profile Icon (top-left inside constraint layout) -->

            <!-- Calories Title -->

            <ImageView
                android:id="@+id/btn_open_drawer"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
...
